k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-mongo
  labels:
    app: fiber-mongo
spec:
  replicas: 1
  template:
    metadata:
      name: fiber-mongo
      labels:
        app: fiber-mongo
    spec:
      containers:
        - name: fiber-mongo
          resizePolicy:
            - resourceName: "memory"
              restartPolicy: "RestartContainer"
            - resourceName: "cpu"
              restartPolicy: "NotRequired"
          resources:
            limits:
              cpu: "300m"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "500Mi"
          image: yurikrupnik/fiber-mongo:pr-67
#          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: fiber-mongo
