k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/users"
            backend:
              service:
                name: fiber-mongo-service
                port:
                  number: 8080
